syntax = "proto3";

option csharp_namespace = "MovieRecommendationsGRPC";

service Top20Movies{
	rpc GetTop20Movies (Top20MoviesGRPCLookupModel) returns (Top20MoviesGRPCModel);
}

message Top20MoviesGRPCLookupModel {
	// bool, int32, float, double, string
	int32 userId = 1; // example of parameter passed in
}

message Top20MoviesGRPCModel {
	// examples
	string firstName = 1;
	string lastName = 2;
	string emailAddress = 3;
	bool isAlive = 4;
	int32 age = 5;
}